--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "homepage": "https://github.com/ezzaldeennobani/HousePlants",
+"predeploy": "npm run build",
+"deploy": "gh-pages -d build"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,4 +47,5 @@
     "gh-pages": "^6.1.1",
     "postcss-loader": "^8.1.1"
   }
+  
 }
